--- a/index3.html
+++ b/index3.html
@@ -9,35 +9,43 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-  </head>
+    <!-- <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script> -->
+ 
+    <!-- script/link for MapQuest display -->
+    <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest-maps.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest-maps.css"/>
+ 
+    <!-- logic file reference -->
+    <script src="assets/js/logic.js"></script>
+
+</head>
 
   <body>
     <div id="main.container" class="container">
       <section class="map-section">
         <div class="row">
           <h2 class="col-lg-6 text-left" id="map-location">MAP</h2>
-
+          <div id="map"></div>
+    
+      
 
           <h2 class="col-lg-6 text-right" id="search-results">Search Results:</h2>
         </div>
 
     </div>
    
-   
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
     <a href="index2.html" class="btn btn-primary" id="reset-button">Reset</button>
 
-    <footer></footer>
-  </body>
+
+  
+
+</body>
 </html>
