Updated jquery files, fixed some logic bugs

--- a/index3.html
+++ b/index3.html
@@ -10,11 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script> -->
  
     <!-- script/link for MapQuest display -->
