--- a/index2.html
+++ b/index2.html
@@ -9,18 +9,16 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    
   </head>
 
   <body>
@@ -42,16 +40,16 @@
             <input
               type="address"
               class="form-control"
-              id="exampleFormControlInput1"
+              id="userArea"
               placeholder="City, ST"
             />
           </div>
           <div class="form-group">
             <label for="exampleFormControlInput2">ZIP CODE</label>
             <input
-              type="zip-code"
+              type="text"
               class="form-control"
-              id="exampleFormControlInput2"
+              id="zipcode"
               placeholder="12345"
             />
           </div>
@@ -61,7 +59,7 @@
             >
             <select
               class="form-control numOfMatches"
-              id="exampleFormControlSelect1"
+              id="results"
             >
               <option>1</option>
               <option>5</option>
@@ -72,7 +70,7 @@
           </div>
           <div class="form-group">
             <label for="exampleFormControlSelect1">Choose a radius</label>
-            <select class="form-control radius" id="exampleFormControlSelect1">
+            <select class="form-control radius" id="radius">
               <option>5 miles</option>
               <option>10 miles</option>
               <option>15 miles</option>
@@ -80,10 +78,12 @@
               <option>50 miles</option>
             </select>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" id="submit">Submit</button>
         </form>
       </section>
     </div>
+
+    <script src="assets/js/logic.js"></script>
 
     <footer></footer>
   </body>
