--- a/index2.html
+++ b/index2.html
@@ -24,69 +24,58 @@
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Placeholder</h1>
-        <p class="lead">
-          Placeholder
-        </p>
-        <div id="map"></div>
+       <div class="container">
+        <div class="row">
+           <div class="col-md-6" id="map">
+      
+           </div>
+          <div class="col-md-6" id="search">
+              <section class="main-section">
+                  <h2>Search Criteria</h2>
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput2">ENTER ANY (Address, City, ST, ZipCode, Country)</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="zipcode"
+                        placeholder="12345"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1"
+                        >How many results would you like?</label
+                      >
+                      <select
+                        class="form-control numOfMatches"
+                        id="results"
+                      >
+                        <option>1</option>
+                        <option>5</option>
+                        <option>10</option>
+                        <option>15</option>
+                        <option>20</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Choose a radius</label>
+                      <select class="form-control radius" id="radius">
+                        <option>5</option>
+                        <option>10</option>
+                        <option>15</option>
+                        <option>20</option>
+                        <option>50</option>
+                      </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+                  </form>
+                </section>
+          </div>
+      </div> 
 
-      </div>
-    </div>
+   
 
-    <div id="main.container" class="container">
-      <section class="main-section">
-        <h2>Search Criteria</h2>
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">City, ST</label>
-            <input
-              type="address"
-              class="form-control"
-              id="userArea"
-              placeholder="City, ST"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput2">ZIP CODE</label>
-            <input
-              type="text"
-              class="form-control"
-              id="zipcode"
-              placeholder="12345"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1"
-              >How many results would you like?</label
-            >
-            <select
-              class="form-control numOfMatches"
-              id="results"
-            >
-              <option>1</option>
-              <option>5</option>
-              <option>10</option>
-              <option>15</option>
-              <option>20</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Choose a radius</label>
-            <select class="form-control radius" id="radius">
-              <option>5</option>
-              <option>10</option>
-              <option>15</option>
-              <option>20</option>
-              <option>50</option>
-            </select>
-          </div>
-          <button type="submit" class="btn btn-primary" id="submit">Submit</button>
-        </form>
-      </section>
-    </div>
-
+      
     <script src="assets/js/logic.js"></script>
 
     <footer></footer>
