--- a/index2.html
+++ b/index2.html
@@ -24,16 +24,19 @@
       rel="stylesheet"
       href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"
     />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-6" id="map">
+        <div class="col-md-6" id="map">  
         </div>
       <div class="col-md-6" id="search">
         <section class="main-section">
-          <h2>Search Criteria</h2>
+          <h2>App Name</h2>
+          <p>Your child's future begins below</p>
           <form>
             <div class="form-group">
               <label for="exampleFormControlInput2">Enter any (Address, City, ST, ZipCode, Country)</label>
