--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6" id="map">  
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" id="map">  
         </div>
       <div class="col-md-6" id="search">
         <section class="main-section">
