--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" id="map">  
         </div>
-      <div class="col-md-6" id="search">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" id="search">
         <section class="main-section">
           <h2>Wapy Schools</h2>
           <p>Your child's future begins below</p>
           <form>
             <div class="form-group">
-              <label for="exampleFormControlInput2">Enter any (Address, City, ST, ZipCode, or Country)</label>
+              <label for="exampleFormControlInput2">Address, City, ST, ZipCode, or Country</label>
               <input
                 type="text"
                 class="form-control"
@@ -85,6 +85,7 @@
           </div>
           <div class="card-body">
             <table>
+                <!-- <div data-spy="scroll" data-offset="0" class="scrollspy-example"> -->
             <tr>
               <th>School Name</th>
               <th>School Type</th>
@@ -95,14 +96,17 @@
             <td id="schoolType"></td>
             <td id="website"></td>
             </tr>
+                <!-- </div> -->
             </table>
           </div>
         </div>
       </div>
     </div> 
 
+    
+
     <script src="assets/js/logic.js"></script>
 
-    <footer></footer>
+    
   </body>
 </html>
