Took out country

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>Your child's future begins below</p>
           <form>
             <div class="form-group">
-              <label for="exampleFormControlInput2">Address, City, ST, ZipCode, or Country</label>
+              <label for="exampleFormControlInput2">Address, City, ST, or ZIPCode</label>
               <input
                 type="text"
                 class="form-control"
